# ai-agent-pm

./: .gitignore  CLAUDE.md  Package.swift  SETUP.md  install.sh  project.yml
.ai-pm/: .gitignore
Sources/App/: AIAgentPMApp.swift  ContentView.swift  Info.plist
Sources/Infrastructure/: AppConfig.swift  Exports.swift
Sources/MCPServer/: App.swift  MCPServer.swift  main.swift
Sources/MCPServerEntry/: main.swift
Sources/RESTServer/: RESTServer.swift  main.swift
Sources/UseCase/: AuthenticationUseCases.swift  ContextUseCases.swift  ExecutionLogUseCases.swift  HandoffUseCases.swift  InternalAuditUseCases.swift  NotificationUseCases.swift  SessionUseCases.swift  SkillArchiveService.swift  SkillUseCases.swift  SubtaskUseCases.swift  TaskUseCases.swift  UseCaseError.swift  (+3 more)
UITests/: AIAgentPMUITests.swift
docs/: MANUAL_STEPS.md  SETUP_GUIDE.md  UNIMPLEMENTED_FEATURES.md
runner/: README.md  pyproject.toml
runner/config/: coordinator_default.yaml
runner/src/aiagent_runner/: __init__.py  __main__.py  config.py  cooldown.py  coordinator.py  coordinator_config.py  log_uploader.py  mcp_client.py  runner.py  types.py
runner/tests/: test_cooldown.py  test_coordinator.py  test_coordinator_log_upload.py  test_mcp_client.py  test_runner.py
runner/tests/integration/: __init__.py  test_runner_integration.py
scripts/: build-app.sh  build-release.sh  create-dmg.sh  run-uitests.sh  test_uc001_integration.sh
web-ui/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+774 files in other folders)
