[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiagent-runner"
version = "0.1.0"
description = "Runner for AI Agent PM - executes tasks via MCP and CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI Agent PM Team" }
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[project.scripts]
aiagent-runner = "aiagent_runner.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aiagent_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
